--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "flask (>=3.1.0,<4.0.0)",
-    "sqlalchemy (>=2.0.40,<3.0.0)"
+    "sqlalchemy (>=2.0.40,<3.0.0)",
+    "flask-login (>=0.6.3,<0.7.0)",
+    "requests (>=2.32.3,<3.0.0)",
+    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
 ]
 
 
