--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "sqlalchemy (>=2.0.40,<3.0.0)",
     "flask-login (>=0.6.3,<0.7.0)",
     "requests (>=2.32.3,<3.0.0)",
-    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
+    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
+    "flask-migrate (>=4.1.0,<5.0.0)"
 ]
 
 
